# world-models

./: .env.example  .gitignore  DISTILLATION_VS_ALPHAZERO.md  EVALS.md  EXPERIMENTS_LOG.md  MIGRATION_PLAN.md  README.md  dashboard.html  pyproject.toml
.github/workflows/: ci.yml  site.yml
01-ha-world-models/: pyproject.toml
01-ha-world-models/scripts/: dream.py  encode_rollouts.py  play.py
01-ha-world-models/src/world_models/: __init__.py  config.py  controller.py  data.py  env.py  vae.py
02-alphazero-chess/: README.md  pyproject.toml  results.md
02-alphazero-chess/scripts/: bench_mps.py  elo.py  eval_high_sims.py  eval_vs_random.py  eval_vs_random_mp.py  h2h_mp.py  selfplay_loop.py  selfplay_loop_mp.py
02-alphazero-chess/tests/: test_arena.py  test_board.py  test_history.py  test_mcts.py  test_mcts_batched.py  test_network.py  test_pcr.py  test_selfplay.py
02b-alphazero-stockfish-distill/: .gitignore  README.md  pyproject.toml
02b-alphazero-stockfish-distill/scripts/: eval.py  generate_data.py  train.py
02b-alphazero-stockfish-distill/src/azdistill/: arena.py  network.py  stockfish_data.py
02b-alphazero-stockfish-distill/tests/: test_data_generation.py  test_train.py
02c-distill-scaled/: .gitignore  README.md  pyproject.toml
02c-distill-scaled/scripts/: eval.py  eval_progress.py  generate_data.py  train.py  (+2 more)
03-muzero-chess/: README.md  pyproject.toml
03-muzero-chess/scripts/: eval_vs_random.py  selfplay_loop.py
03-muzero-chess/src/muzero/: arena.py  board.py  config.py  mcts.py  networks.py  replay.py  selfplay.py  train.py
03-muzero-chess/tests/: test_unroll.py
experiments/distill-go/: .gitignore  README.md  pyproject.toml  results.md
experiments/distill-go-spike/: README.md  pyproject.toml
experiments/distill-go-spike/scripts/: run_spike.py  run_spike_parallel.py
experiments/distill-go-spike/src/distill_go_spike/: __init__.py  board.py  katago_data.py
experiments/distill-go-spike/tests/: test_distill_go_spike.py
experiments/distill-go/scripts/: calibrate.py  eval.py  generate_data.py  h2h.py  merge_cloud.py  selfplay_loop.py  train.py
experiments/distill-go/src/distill_go/: __init__.py  board.py  config.py  katago_data.py  katago_data_parallel.py  mcts.py  merge.py  network.py  train.py
experiments/distill-go/tests/: test_board.py  test_h2h.py  test_network_mcts.py  test_selfplay_loop.py
experiments/distill-hard/: README.md  pyproject.toml
experiments/distill-hard/scripts/: eval.py  generate_data.py  train.py
experiments/distill-hard/src/distill_hard/: stockfish_data.py  train_supervised.py
experiments/distill-hard/tests/: test_data_generation.py  test_train.py
experiments/distill-soft/: .gitignore  README.md  pyproject.toml  results.md
experiments/distill-soft/aws_results/run02_30ep/: train_history.json
experiments/distill-soft/scripts/: elo_bisect.py  eval.py  generate_data.py  progress.py  run_split_pipeline.sh  train.py
experiments/distill-soft/src/distill_soft/: ckpt.py  stockfish_data.py  train_supervised.py
experiments/distill-soft/tests/: test_board.py  test_ckpt.py  test_data_generation.py  test_elo_bisect.py  test_eval_gap.py  test_network.py  test_train_supervised.py
experiments/muzero-chess/: README.md  pyproject.toml
experiments/muzero-chess/scripts/: run_cloud.py  run_distill_init.py  run_local.py  smoke_distill_init.py
experiments/muzero-chess/src/muzero_chess/: config.py  distill_dynamics.py  driver.py  eval.py  mcts.py  networks.py  replay.py  selfplay.py  teacher.py  train.py
experiments/muzero-chess/tests/: test_eval.py  test_mcts.py  test_networks.py  test_replay.py  test_selfplay.py  test_teacher.py  test_train.py
experiments/selfplay/: README.md  pyproject.toml  results.md
experiments/selfplay/scripts/: bench_mps.py  elo.py  eval_high_sims.py  eval_vs_random.py  eval_vs_random_mp.py  h2h_mp.py  selfplay_loop.py  selfplay_loop_mp.py
experiments/selfplay/src/selfplay/: ckpt.py  replay.py  selfplay.py  train.py
experiments/selfplay/tests/: test_board.py  test_ckpt.py  test_history.py  test_mcts.py  test_network.py  test_pcr.py  test_replay.py  test_selfplay.py
infra/: .gitignore  README.md  main.tf  outputs.tf  user_data.sh  variables.tf
infra-eks/: Dockerfile  Dockerfile.train  Dockerfile.wm-go  Dockerfile.wm-go-gpu  README.md  buildspec-go-gpu.yml  buildspec-go.yml  buildspec-train.yml  buildspec.yml  cleanup-zombie-clusters.sh  cluster-gen-10x.yaml  cluster-gen-d15-250k-eu.yaml  cluster-gen-d15-250k.yaml  cluster-gen-go-gpu-use1.yaml  cluster-gen-go-gpu-use2.yaml  cluster-gen-go-use2.yaml  cluster-ie.yaml  cluster-selfplay-us.yaml  cluster-train-eu.yaml  cluster-train-us.yaml  cluster.yaml  codebuild.json  entrypoint-go.sh  entrypoint-muzero-chess.sh  entrypoint-muzero-distill-init.sh  entrypoint-selfplay.sh  entrypoint-train.sh  entrypoint.sh  katago-analysis-gpu.cfg  katago-analysis.cfg  nodegroup-c-family-d15-250k-eu.yaml  nodegroup-fast-us.yaml  nodegroup-fast.yaml  nodegroup-gpu-ondemand.yaml  nodegroup-l40s-b-us.yaml  nodegroup-l40s-us.yaml  run-selfplay.sh  run-train.sh  run.sh
infra-eks/spot-rover/: README.md  pyproject.toml
infra-eks/spot-rover/configs/: chess-d15-250k.yaml  go-9x9.yaml
infra-eks/spot-rover/scripts/: rove.py
infra-eks/spot-rover/src/spot_rover/: __init__.py  capacity.py  provision.py  score.py  state.py  template.py
infra-eks/spot-rover/templates/: cluster.yaml.tmpl
infra-eks/spot-rover/tests/: test_score.py  test_template.py
scripts/: collect_rollouts.py  evaluate.py  sync_experiments_log.py  test_sync_experiments_log.py  train_controller.py  train_rnn.py  train_vae.py
site/: README.md  hugo.toml
wm_chess/: pyproject.toml
wm_chess/scripts/: catalog.py  merge_chunks.py  merge_shards.py  overnight_configs.tsv  overnight_datagen.sh  parallel_datagen.sh  train_eval_chain.sh  watch_and_finalize.sh
wm_chess/src/wm_chess/: __init__.py  arena.py  config.py
wm_chess/tests/: test_arena.py  test_board_more.py  test_catalog.py  test_deprecation_stubs.py  test_history.py  test_mcts_batched.py  test_merge_chunks.py  test_merge_shards.py
(+129 files in other folders)
