[project]
name = "world-models"
version = "0.1.0"
description = "Hands-on World Models (Ha & Schmidhuber 2018) on Gymnasium"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch>=2.5",
    "torchvision>=0.20",
    "numpy>=1.26",
    "gymnasium[box2d]>=1.0",
    "swig>=4.2",
    "pygame>=2.5",
    "tqdm>=4.66",
    "imageio>=2.34",
    "imageio-ffmpeg>=0.5",
    "matplotlib>=3.8",
    "opencv-python>=4.10",
    "cma>=3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/world_models"]
