[project]
name = "azdistill"
version = "0.1.0"
description = "AlphaZero-architecture network trained by SUPERVISED distillation from Stockfish — non-faithful to AZ paper, but pragmatic for testing whether our network can play stronger chess if given good targets"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch>=2.5",
    "numpy>=1.26",
    "python-chess>=1.999",
    "tqdm>=4.66",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/azdistill"]
