[project]
name = "distill-go"
version = "0.1.0"
description = "Full Go distillation pipeline (datagen + train + MCTS + eval), KataGo as teacher."
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "torch>=2.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
