[project]
name = "muzero-chess"
version = "0.1.0"
description = "MuZero on chess — three networks (representation, dynamics, prediction), MCTS over learned dynamics, K-step unrolled training. Educational counterpart to the AlphaZero-family pipelines in this repo."
requires-python = ">=3.11,<3.13"
dependencies = [
    "wm-chess",          # for chess.Board + the 19-plane encoder
    "torch>=2.5",
    "numpy>=1.26",
    "python-chess>=1.999",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/muzero_chess"]

[tool.uv.sources]
wm-chess = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
