[project]
name = "spot-rover"
version = "0.1.0"
description = "Scan AWS regions for available spot capacity, render an eksctl cluster spec for the winner, and apply the workload Job. One-shot recommender + deployer."
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34",
    "pyyaml>=6",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
